Remove commons-lang3 from client-core and improve exception logging
Replace all commons-lang3 usages in client-core with Java 17+ standard
library equivalents: BooleanUtils → Boolean.parseBoolean/toString,
StringUtils.isBlank/isEmpty → null-safe inline checks, StringUtils.join
→ String.join, StringUtils.EMPTY → "". Add StringHelper utility for
substringBefore/After/BeforeLast/AfterLast with full test coverage.

Also replace all swallowed catch(IOException ignored) blocks across lib/
with LOG.debug calls for improved debuggability, and remove a stray
System.out.println from TripPinServiceTest.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>